downgraded to support java 11